public/2020/05/08/Unity/ToLua/ToLua 介绍/ToLua/Core/LuaDLL.cs

        
        //用于把堆栈的栈顶索引设置为指定的数值;一个栈原来有8个元素，调用函数设置index为7，就是把堆栈的元素数设置为7，也就是删掉一个元素，而且是栈顶元素;
        //这个是用的正数，也就是相对于栈底元素设置的,栈底一般为正值一般为 1;如果是相对于栈顶元素，一般用负值为-1
        //例子，栈的初始状态为10 20 30 40 50 *（从栈底到栈顶，“*”标识为栈顶，有：
        // lua_settop(L, -3)      --> 10 20 30 *
        // lua_settop(L,  6)      --> 10 20 30 nil nil nil *
        //需要与lua_remove对比着看
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_settop(IntPtr luaState, int top);
        
        //将栈中的某个值取出,并将其压入栈顶;例子:
        //栈的初始状态为10 20 30 40 50 *（从栈底到栈顶，“*”标识为栈顶）
        //有：    lua_pushvalue(L, 3)    --> 10 20 30 40 50 30*;
        //lua_pushvalue(L,3)是取得原来栈中的第三个元素，压到栈顶;
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushvalue(IntPtr luaState, int idx);
        
        //lua_remove删除给定索引的元素，并将这一索引之上的元素来填补空缺;例子:
        //栈的初始状态为10 20 30 40 50 *（从栈底到栈顶，“*”标识为栈顶，有：
        //lua_remove(L, -3)      --> 10 20 40 50*
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_remove(IntPtr luaState, int idx);
        
        //插入,将栈顶的元素移动到 idx 处 ,在上移给定索引之上的所有元素后再在指定位置插入新元素;例子:
        //lua_insert(L, -1)      --> 30 10 20 30 40*  (没影响)
        //lua_insert(L, -2)      --> 30 10 20 40 30*
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_insert(IntPtr luaState, int idx);
        
        
        //Lua_replace将栈顶元素压入指定位置而不移动任何元素,因此指定位置的元素的值被替换
        //例子，栈的初始状态为10 20 30 40 50 *（从栈底到栈顶，“*”标识为栈顶，有：
        //lua_replace(L, 2)      --> 10 50 30 40 *    //把50替换到索引的位置，同时去掉栈顶元素
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_replace(IntPtr luaState, int index);
        
        //确保堆栈中至少有额外的可用堆栈插槽。 如果不能将堆栈增加到该大小，则返回false。 这个函数永远不会缩小堆栈； 如果堆栈已经大于新的大小， 它保持不变。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_checkstack(IntPtr luaState, int extra);
        
        //这个作用一般是将新的协同程序中的值移动到其他地方使用
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_xmove(IntPtr from, IntPtr to, int n);
        
        //判断lua_State栈中的某个 idx 是否是一个 number 的值,类似于查看功能
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_isnumber(IntPtr luaState, int idx);
        
        //判断lua_State栈中的某个 idx 是否是一个 string 的值,类似于查看功能
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_isstring(IntPtr luaState, int index);
        
        //判断lua_State栈中的某个 idx 是否是一个 c function 的值,类似于查看功能
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_iscfunction(IntPtr luaState, int index);
        
        //判断lua_State栈中的某个 idx 是否是一个 userdata 的值,类似于查看功能
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_isuserdata(IntPtr luaState, int stackPos);
        
        //判断lua_State栈中的某个 idx 是否是一个 type 的值,类似于查看功能
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern LuaTypes lua_type(IntPtr luaState, int index);

        public static string lua_typename(IntPtr luaState, LuaTypes type)
        {
            int t = (int)type;
            return LuaTypeName[t + 1];
        }
        
        //在lua_State栈中,如果依照 Lua 中 == 操作符语义，索引 index1 和 index2 中的值相同的话，返回 1 。否则返回 0 。如果任何一个索引无效也会返回 0
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_equal(IntPtr luaState, int idx1, int idx2);
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        
        //如果两个索引 index1 和 index2 处的值简单地相等（不调用元方法）则返回 1 。否则返回 0 。如果任何一个索引无效也返回 0 。
        public static extern int lua_rawequal(IntPtr luaState, int idx1, int idx2);
        
        //如果索引 index1 处的值小于索引 index2 处的值时，返回 1 ；否则返回 0 。其语义遵循 Lua 中的< 操作符（就是说，有可能调用元方法）。如果任何一个索引无效，也会返回 0 。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_lessthan(IntPtr luaState, int idx1, int idx2);
        
        //把给定索引处的 Lua 值转换为 lua_Number 这样一个 C 类型（参见 lua_Number ）。这个 Lua 值必须是一个数字或是一个可转换为数字的字符串（参见 §2.2.1 ）；否则，lua_tonumber 返回 0 。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern double lua_tonumber(IntPtr luaState, int idx);
        
        //把给定索引处的 Lua 值转换为 lua_Integer 这样一个有符号整数类型。这个 Lua 值必须是一个数字或是一个可以转换为数字的字符串（参见 §2.2.1）；否则，lua_tointeger 返回 0 。
        public static int lua_tointeger(IntPtr luaState, int idx)
        {
            return tolua_tointeger(luaState, idx);
        }
        
        //把指定的索引处的的 Lua 值转换为一个 C 中的 boolean 值（ 0 或是 1 ）。和 Lua 中做的所有测试一样，lua_toboolean 会把任何不同于false 和nil 的值当作 1 返回；否则就返回 0 。如果用一个无效索引去调用也会返回 0 。（如果你想只接收真正的 boolean 值，就需要使用lua_isboolean 来测试值的类型。）
        public static bool lua_toboolean(IntPtr luaState, int idx)
        {
            return tolua_toboolean(luaState, idx);            
        }
        
        /*
         * 把给定索引处的 Lua 值转换为一个 C 字符串。如果 len 不为 NULL ，它还把字符串长度设到*len 中。这个 Lua 值必须是一个字符串或是一个数字；否则返回返回NULL 。
         * 如果值是一个数字，lua_tolstring 还会把堆栈中的那个值的实际类型转换为一个字符串。（当遍历一个表的时候，把lua_tolstring 作用在键上，这个转换有可能导致lua_next 弄错。）
         * lua_tolstring 返回 Lua 状态机中字符串的以对齐指针。这个字符串总能保证 （ C 要求的）最后一个字符为零 ('\0') ，而且它允许在字符串内包含多个这样的零。
         * 因为 Lua 中可能发生垃圾收集，所以不保证lua_tolstring 返回的指针，在对应的值从堆栈中移除后依然有效。
         */
        public static IntPtr lua_tolstring(IntPtr luaState, int index, out int strLen)               //[-0, +0, m]
        {            
            return tolua_tolstring(luaState, index, out strLen);
        }
        
        //lua 表,恒返回 0,在lua_State,返回 obj 的个数
        public static int lua_objlen(IntPtr luaState, int idx)
        {
            return tolua_objlen(luaState, idx);
        }
        
        //把给定索引处的 Lua 值转换为一个 C 函数。这个值必须是一个 C 函数；如果不是就返回 NULL 。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lua_tocfunction(IntPtr luaState, int idx);
        
        //如果给定索引处的值是一个完整的 userdata ，函数返回内存块的地址。如果值是一个 light userdata ，那么就返回它表示的指针。否则，返回NULL 。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lua_touserdata(IntPtr luaState, int idx);
        
        //把给定索引处的值转换为一个 Lua 线程（由 lua_State* 代表）。这个值必须是一个线程；否则函数返回NULL 。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lua_tothread(IntPtr L, int idx);
        
        //把给定索引处的值转换为一般的 C 指针 (void*) 。这个值可以是一个 userdata ，table ，thread 或是一个 function ；否则，lua_topointer 返回NULL 。不同的对象有不同的指针。不存在把指针再转回原有类型的方法。
        //这个函数通常只为产生 debug 信息用。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr lua_topointer(IntPtr L, int idx);

        //把一个 nil 压栈。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushnil(IntPtr luaState);
        
        //把一个数字 n 压栈。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushnumber(IntPtr luaState, double number);
        
        //
        public static void lua_pushinteger(IntPtr L, int n)
        {
            lua_pushnumber(L, n);
        }                
        
        //把指针 s 指向的长度为 len 的字符串压栈。 Lua 对这个字符串做一次内存拷贝（或是复用一个拷贝），因此s 处的内存在函数返回后，可以释放掉或是重用于其它用途。字符串内可以保存有零字符。
        public static void lua_pushlstring(IntPtr luaState, byte[] str, int size)                   //[-0, +1, m]
        {
            if (size >= 0x7fffff00)
            {
                throw new LuaException("string length overflow");
            }

            tolua_pushlstring(luaState, str, size);
        }
        
        //把指针 s 指向的以零结尾的字符串压栈。 Lua 对这个字符串做一次内存拷贝（或是复用一个拷贝），因此s 处的内存在函数返回后，可以释放掉或是重用于其它用途。字符串中不能包含有零字符；第一个碰到的零字符会认为是字符串的结束。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushstring(IntPtr luaState, string str);                      //[-0, +1, m]
        
        //把一个新的 C closure 压入堆栈。
        //当创建了一个 C 函数后，你可以给它关联一些值，这样就是在创建一个 C closure （参见 §3.4）；接下来无论函数何时被调用，这些值都可以被这个函数访问到。为了将一些值关联到一个 C 函数上，首先这些值需要先被压入堆栈（如果有多个值，第一个先压）。接下来调用lua_pushcclosure 来创建出 closure 并把这个 C 函数压到堆栈上。参数n 告之函数有多少个值需要关联到函数上。lua_pushcclosure 也会把这些值从栈上弹出。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushcclosure(IntPtr luaState, IntPtr fn, int n);              //[-n, +1, m]
        
        //把 b 作为一个 boolean 值压入堆栈。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushboolean(IntPtr luaState, int value);

        public static void lua_pushboolean(IntPtr luaState, bool value)
        {
            lua_pushboolean(luaState, value ? 1 : 0);
        }
        
        //把一个 light userdata 压栈。userdata 在 Lua 中表示一个 C 值。 light userdata 表示一个指针。 它是一个像数字一样的值： 你不需要专门创建它，它也没有独立的 metatable ， 而且也不会被收集（因为从来不需要创建）。 只要表示的 C 地址相同，两个 light userdata 就相等。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_pushlightuserdata(IntPtr luaState, IntPtr udata);
        
        //把 L 中提供的线程压栈。 如果这个线程是当前状态机的主线程的话，返回 1 。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern int lua_pushthread(IntPtr L);

        //把 t[k] 值压入堆栈， 这里的 t 是指有效索引 index 指向的值， 而 k 则是栈顶放的值。
        //这个函数会弹出堆栈上的 key （把结果放在栈上相同位置）。 在 Lua 中，这个函数可能触发对应 "index" 事件的元方法 （参见 §2.8）。
        public static void lua_gettable(IntPtr L, int idx)
        {
            if (LuaDLL.tolua_gettable(L, idx) != 0)
            {
                string error = LuaDLL.lua_tostring(L, -1);
                throw new LuaException(error);
            }
        }
        
        //把 t[k] 值压入堆栈， 这里的 t 是指有效索引 index 指向的值。 在 Lua 中，这个函数可能触发对应 "index" 事件的元方法 （参见 §2.8）。
        public static void lua_getfield(IntPtr L, int idx, string key)
        {
            if (LuaDLL.tolua_getfield(L, idx, key) != 0)
            {
                string error = LuaDLL.lua_tostring(L, -1);
                throw new LuaException(error);
            }
        }
        
        //类似于 lua_gettable，但是作一次直接访问（不触发元方法）。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_rawget(IntPtr luaState, int idx);
        
        //把 t[n] 的值压栈，这里的 t 是指给定索引 index 处的一个值。这是一个直接访问；就是说，它不会触发元方法。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_rawgeti(IntPtr luaState, int idx, int n);
        
        //创建一个新的空 table 压入堆栈。 这个新 table 将被预分配 narr 个元素的数组空间 以及 nrec 个元素的非数组空间。 当你明确知道表中需要多少个元素时，预分配就非常有用。 如果你不知道，可以使用函数 lua_newtable。
        [DllImport(LUADLL, CallingConvention = CallingConvention.Cdecl)]
        public static extern void lua_createtable(IntPtr luaState, int narr, int nrec);             //[-0, +1, m]        
        
        //这个函数分配分配一块指定大小的内存块， 把内存块地址作为一个完整的 userdata 压入堆栈，并返回这个地址。
        //userdata 代表 Lua 中的 C 值。 完整的 userdata 代表一块内存。 它是一个对象（就像 table 那样的对象）： 你必须创建它，它有着自己的元表，而且它在被回收时，可以被监测到。 一个完整的 userdata 只和它自己相等（在等于的原生作用下）。
        //当 Lua 通过 gc 元方法回收一个完整的 userdata 时， Lua 调用这个元方法并把 userdata 标记为已终止。 等到这个 userdata 再次被收集的时候，Lua 会释放掉相关的内存。
        public static IntPtr lua_newuserdata(IntPtr luaState, int size)                             //[-0, +1, m]
        {
            return tolua_newuserdata(luaState, size);
        }
